Kubernetes yaml file/deploy01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy01
  labels:
    type: frontend
  namespace: nisha
spec:
  replicas: 4
  selector:
    matchLabels:
      type: php
  template:
    metadata:
      labels:
       type: php
    spec:
      containers:
       - name: phpcontainer
         image: httpd
