Kubernetes yaml file/deploy-srv01.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv01
  namespace: nisha
spec:
  type: NodePort
  selector:
    type: php
  ports:
    - port: 80
      targetPort: 3000
