Kubernetes yaml file/deploy-srv02.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv02
  namespace: nisha
spec:
  type: ClusterIP
  selector:
    type: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
