Kubernetes yaml file/deploy-srv03.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv03
  namespace: nisha
spec:
  type: LoadBalancer
  selector:
    type: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
